--- a/public/uncss/main.css
+++ b/public/uncss/main.css
@@ -10,12 +10,9 @@ body {
   margin: 0;
 }
 
-article,
 figure,
-footer,
 header,
-hgroup,
-section {
+nav {
   display: block;
 }
 
@@ -28,11 +25,6 @@ a:hover {
   outline: 0;
 }
 
-h1 {
-  font-size: 2em;
-  margin: .67em 0;
-}
-
 img {
   border: 0;
 }
@@ -41,20 +33,34 @@ figure {
   margin: 1em 40px;
 }
 
-select {
+button,
+input {
   color: inherit;
   font: inherit;
   margin: 0;
 }
 
-select {
+button {
+  overflow: visible;
+}
+
+button {
   text-transform: none;
+}
+
+button {
+  -webkit-appearance: button;
+  cursor: pointer;
 }
 
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
+}
+
+input {
+  line-height: normal;
 }
 
 @font-face {
@@ -85,8 +91,69 @@ input::-moz-focus-inner {
   src: url("../fonts/opensans-regular-webfont.eot?#iefix") format('embedded-opentype'),url("../fonts/opensans-regular-webfont.woff") format('woff'),url("../fonts/opensans-regular-webfont.ttf") format('truetype'),url("../fonts/opensans-regular-webfont.svg#opensans-regular-webfont") format('svg');
 }
 
-.icon {
-  background-image: url("../img/sprite.png");
+/* normalize.css v3.0.0 | MIT License | git.io/normalize */
+
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+figure,
+header,
+nav {
+  display: block;
+}
+
+a {
+  background: transparent;
+}
+
+a:active,
+a:hover {
+  outline: 0;
+}
+
+img {
+  border: 0;
+}
+
+figure {
+  margin: 1em 40px;
+}
+
+button,
+input {
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+
+button {
+  overflow: visible;
+}
+
+button {
+  text-transform: none;
+}
+
+button {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+input {
+  line-height: normal;
 }
 
 html {
@@ -106,576 +173,89 @@ a:visited {
 
 ul,
 p,
-h1,
-h2,
-h3,
 figure {
   margin: 0;
   padding: 0;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-family: OSansBold;
-}
-
-h1 {
-  font-size: 1.5rem;
-}
-
-h2 {
-  font-size: 1.375rem;
-}
-
-h3 {
-  font-size: 1.125rem;
 }
 
 ul {
   list-style: none;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
-  font-family: 'icomoon';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-twitter:before {
-  content: "\f081";
-}
-
-.icon-facebook:before {
-  content: "\f082";
-}
-
-.icon-phone:before {
-  content: "\f095";
-}
-
-.icon-envelope:before {
-  content: "\f0e0";
-}
-
-.icon-angle-right:before {
-  content: "\f105";
-}
-
-.icon-movistar {
-  background-position: -5px -49px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  display: block;
-  width: 172px;
-  height: 38px;
-}
-
-.icon-westernUnion {
-  background-position: -5px -322px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  display: block;
-  width: 193px;
-  height: 53px;
-}
-
-.icon-mapfre {
-  background-position: -5px -201px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  display: block;
-  width: 228px;
-  height: 49px;
-}
-
-.icon-claro {
-  background-position: -5px -451px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  display: block;
-  width: 61px;
-  height: 61px;
-}
-
-.icon-grupoCoen {
-  background-position: -5px -522px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  display: block;
-  width: 81px;
-  height: 64px;
-}
-
-.icon-ListoMarketing {
-  background-position: -5px -97px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  display: block;
-  width: 190px;
-  height: 38px;
-}
-
-.icon-comoEnviarDinero {
-  background-position: -5px -942px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  display: block;
-  width: 83px;
-  height: 82px;
-}
-
-.icon-comoRecibirDinero {
-  background-position: -5px -851px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  display: block;
-  width: 82px;
-  height: 81px;
-}
-
-.texto p {
-  margin-bottom: .8rem;
-}
-
-header {
-  background-color: #062138;
-  padding: 2rem 0;
-  text-align: center;
-  color: #fff;
-}
-
-header .logotipo {
-  margin-bottom: 1rem;
-}
-
-header .infoCliente p {
-  font-family: OSansBold;
-}
-
-header .infoCliente span {
-  padding: 0 .5rem;
-  display: inline-block;
-  font-size: 1.125rem;
-}
-
-header .infoCliente span:before {
-  color: #006ac7;
-  vertical-align: middle;
-  padding-right: 8px;
-}
-
-header .redesSociales ul {
-  margin: 1rem auto 0 auto;
-}
-
-header .redesSociales ul li {
-  display: inline-block;
-  vertical-align: top;
-  margin: 0 .5rem;
-}
-
-header .redesSociales ul li a:link,
-header .redesSociales ul li a:visited {
-  color: #006ac7;
-  font-size: 2.5rem;
-}
-
-header .redesSociales .formulario {
-  margin-top: 1rem;
-}
-
-header .redesSociales .formulario select {
-  border: 1px solid #006ac7;
-  color: #006ac7;
-  background-color: transparent;
-  padding: .3rem .8rem;
-  width: 11.25rem;
-}
-
-.slider {
-  background-color: #006ac7;
-}
-
-.slider .wrap {
-  font-size: 0;
-}
-
-.slider .wrap img {
-  max-width: 100%;
-  height: auto;
-}
-
-.banner-principal {
-  background-color: #006ac7;
-  min-height: 6rem;
-}
-
-.banner-principal .wrap {
-  background: -webkit-linear-gradient(top, #4da5f1, #006ac7);
-  background: -moz-linear-gradient(top, #4da5f1, #006ac7);
-  background: -o-linear-gradient(top, #4da5f1, #006ac7);
-  background: -ms-linear-gradient(top, #4da5f1, #006ac7);
-  background: linear-gradient(to bottom, #4da5f1, #006ac7);
-  position: relative;
-}
-
-.banner-principal .wrap hgroup {
+header .row figure {
+  border-right: 1px solid rgba(0,0,0,0.2);
+  height: 109px;
   text-align: center;
 }
 
-.banner-principal .wrap hgroup h4,
-.banner-principal .wrap hgroup h5 {
-  margin: 0;
+header .row .menu ul {
+  text-align: center;
 }
 
-.banner-principal .wrap hgroup h4 {
-  font-family: OSansLight;
-  font-size: 2.125rem;
-}
-
-.banner-principal .wrap hgroup h5 {
-  font-family: OSansBold;
-  font-size: 3.125rem;
+header .row li {
   text-transform: uppercase;
 }
 
-.banner-principal .wrap .imagen {
-  font-size: 0;
+header .row li a:hover {
+  text-decoration: none;
+}
+
+header .row button {
+  background-color: transparent;
+  border: 0;
+}
+
+header .row button span {
+  font-size: 2.2rem;
+}
+
+header .row a span {
+  font-size: 2.2rem;
+}
+
+header .row .menu2Mobile {
+  border: 1px solid rgba(0,0,0,0.2);
+}
+
+header .row .countries,
+header .row .user,
+header .row .form {
+  border-top: 1px solid rgba(0,0,0,0.2);
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+  border-right: 1px solid rgba(0,0,0,0.2);
+}
+
+header .row .menu2Mobile,
+header .row .countries,
+header .row .user,
+header .row .form {
+  height: 41px;
   text-align: center;
+  padding: 0;
 }
 
-.banner-principal .wrap .imagen img {
-  max-width: 100%;
-  height: auto;
+header .row .menu2Mobile span,
+header .row .countries span,
+header .row .user span,
+header .row .form span {
+  line-height: 1.5;
 }
 
-section {
-  padding: 2rem 1rem;
+header .row .form {
+  position: relative;
 }
 
-.servicios article {
-  max-width: 17.875rem;
-  background-color: #062138;
-  border-bottom: 10px solid #c7c7c7;
-  height: 17.5rem;
-  margin: 2rem auto;
-}
-
-.servicios article figure {
-  font-size: 0;
-  margin: 0;
-}
-
-.servicios article .titulo {
-  background-color: #000;
-  text-align: right;
-  zoom: 1;
-  height: 3.75rem;
-}
-
-.servicios article .titulo:before,
-.servicios article .titulo:after {
-  content: "";
-  display: table;
-}
-
-.servicios article .titulo:after {
-  clear: both;
-}
-
-.servicios article .titulo h2 {
+header .row .form button,
+header .row .form input {
   display: inline-block;
-  vertical-align: top;
-  color: #fff;
-  max-width: 14.375rem;
-  text-align: left;
-  float: left;
-  padding: 0 .8rem .5rem 1rem;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 1.375rem;
-}
-
-.servicios article .titulo .boton {
-  display: inline-block;
-  vertical-align: top;
-  text-align: center;
-  width: 3.5rem;
-  background-color: #006ac7;
-  height: 100%;
-}
-
-.servicios article .titulo .boton a:link,
-.servicios article .titulo .boton a:visited {
-  display: inline-block;
-  font-size: 1.5rem;
-  color: #fff;
-  padding: .9rem;
-}
-
-.servicios article .contenido {
-  text-align: left;
-  color: #fff;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 1rem;
-}
-
-.aliados {
-  background-color: #c7c7c7;
-  text-align: center;
-}
-
-.aliados ul li span {
-  margin: 1rem auto;
-}
-
-section.principal h1,
-section.principal h3 {
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-section.principal h3 span {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-section.principal ul li:before {
-  content: "\f0da";
-  color: #d0bb00;
-  font-family: icomoon;
-  padding-right: .5rem;
-}
-
-section.principal ul li ul {
-  margin: 1rem;
-  list-style-type: disc;
-}
-
-section.principal ul li ul li:before {
-  content: "";
-}
-
-footer {
-  background-color: #24262c;
-  color: #fff;
-  text-align: center;
-  padding: 2rem 1rem;
-}
-
-footer span {
-  margin: .6rem auto;
-}
-
-footer .contacto span {
-  padding: 0 .5rem;
-  display: inline-block;
-  font-size: .875rem;
-}
-
-footer .contacto span:before {
-  color: #006ac7;
   vertical-align: middle;
-  padding-right: 8px;
 }
 
-footer article {
-  margin-bottom: 1.2rem;
+header .row .form button {
+  width: 30%;
 }
 
-footer article h3 {
-  color: #006ac7;
-}
-
-footer article ul {
-  width: 12.5rem;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-footer article ul li {
-  text-align: left;
-  font-family: OSansLight;
-  margin: .7rem 0;
-}
-
-footer article ul li:before {
-  content: "\f0da";
-  color: #006ac7;
-  font-family: icomoon;
-  padding-right: .5rem;
-}
-
-footer article ul li a:link,
-footer article ul li a:visited {
-  color: #fff;
-}
-
-footer article ul li a:hover {
-  text-decoration: underline;
-}
-
-@media screen and (min-width:768px) {
-  header.medium .wrap > div {
-    display: inline-block;
-    vertical-align: middle;
-    margin: 0 .8rem;
-  }
-
-  header.medium .wrap .logotipo {
-    margin-bottom: 0;
-  }
-
-  header.medium .wrap .infoCliente span {
-    font-size: 14px;
-  }
-
-  header.medium .wrap .redesSociales ul {
-    margin: 0;
-  }
-
-  .servicios.medium {
-    padding-left: 2rem;
-    padding-right: 2rem;
-    text-align: center;
-  }
-
-  .servicios.medium article {
-    display: inline-block;
-    vertical-align: top;
-  }
-
-  .servicios.medium article:nth-child(odd) {
-    margin-right: 5rem;
-  }
-
-  .aliados.medium ul li {
-    display: inline-block;
-    vertical-align: middle;
-    margin: 0 4rem;
-  }
-
-  footer.medium {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  footer.medium .wrap {
-    text-align: center;
-  }
-
-  footer.medium .wrap article {
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    width: 33.333333333333336%;
-    margin-bottom: 0;
-  }
-
-  footer.medium .wrap article span {
-    margin-left: 0;
-    margin-right: 0;
-    font-size: 14px;
-  }
-}
-
-@media screen and (min-width:1000px) {
-  .wrap {
-    margin-left: auto;
-    margin-right: auto;
-    width: 58.75rem;
-  }
-
-  header.large {
-    text-align: left;
-  }
-
-  header.large .wrap .logotipo,
-  header.large .wrap .redesSociales {
-    margin: 0;
-    width: 25%;
-  }
-
-  header.large .wrap .infoCliente {
-    margin: 0;
-    text-align: center;
-    width: 49%;
-  }
-
-  header.large .wrap .redesSociales {
-    text-align: right;
-  }
-
-  .servicios.large article {
-    margin-right: 1.7rem !important;
-  }
-
-  .servicios.large article:nth-child(3n + 3) {
-    margin-right: 0 !important;
-  }
-
-  section.large .texto,
-  section.large ul {
-    padding: 0 6rem;
-    font-size: .875rem;
-  }
-
-  section.large ul li {
-    margin: .8rem;
-  }
-
-  section.large ul li li {
-    margin: 0;
-  }
-
-  section.large h3 {
-    margin: 3rem 0;
-  }
-
-  section.large h3 span {
-    display: inline-block;
-    vertical-align: middle;
-  }
-
-  .banner-principal.large {
-    text-align: center;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    height: 15.625rem;
-  }
-
-  .banner-principal.large hgroup,
-  .banner-principal.large .imagen {
-    display: inline-block;
-    vertical-align: middle;
-  }
-
-  .banner-principal.large hgroup {
-    text-align: left;
-  }
-
-  .aliados.large ul li {
-    margin: 0 2rem;
-  }
-
-  footer.large h3 {
-    text-align: center;
-  }
-
-  footer.large ul {
-    padding-left: 5rem;
-  }
+header .row .form input {
+  border: 0;
+  width: 67%;
 }
