Creada 80% version movil

--- a/dev/Stylus/fonts.styl
+++ b/dev/Stylus/fonts.styl
@@ -5,9 +5,9 @@ fuente(nombre,miFuente)
 		src url('../fonts/'+ miFuente +'.eot')
 		src url('../fonts/'+ miFuente +'.eot?#iefix') format('embedded-opentype'),url('../fonts/'+miFuente+'.woff') format('woff'),url('../fonts/'+miFuente+'.ttf') format('truetype'),url('../fonts/'+miFuente+'.svg#'+miFuente) format('svg')
 
-fuente(icomoon, icomoon)
-fuente(OSansBold, opensans-bold-webfont)
-fuente(OSansLight, opensans-light-webfont)
-fuente(OSansReg, opensans-regular-webfont)
+
+fuente(TR-ital, rough_typewriter-itl-webfont)
+fuente(TR-Bold, rough_typewriter-bld-itl-webfont)
+fuente(TR-Reg, rough_typewriter-webfont)
 
 
