--- a/public/uncss/main.css
+++ b/public/uncss/main.css
@@ -156,7 +156,7 @@ input {
 }
 
 html {
-  font-size: 16px !important;
+  font-size: 16px;
 }
 
 body {
@@ -570,10 +570,83 @@ footer .followers .navigation-2 li {
   margin-bottom: .8rem;
 }
 
+@media screen and (min-width:768px) {
+  .btn-trans {
+    max-width: 25rem;
+  }
+
+  header.medium .menu {
+    margin-top: 1.5rem;
+  }
+
+  header.medium .menu li {
+    display: inline-block;
+    vertical-align: top;
+    margin: 1rem;
+  }
+
+  header.medium .menu li a {
+    font-size: 1.5rem;
+    font-family: "Open Sans";
+    font-weight: 300;
+  }
+
+  .banner.medium .row figure,
+  .banner.medium .row p {
+    display: inline-block;
+    float: none;
+    vertical-align: middle;
+  }
+
+  .banner.medium h2 {
+    margin-top: 2.5rem;
+  }
+
+  .member.medium .row > :first-child:after {
+    left: 41%;
+  }
+
+  footer.medium {
+    padding-bottom: 1rem;
+  }
+
+  footer.medium .followers .follow {
+    display: inline-block;
+    vertical-align: top;
+    font-size: .8rem;
+  }
+
+  footer.medium .followers .follow:first-of-type {
+    margin-right: .4rem;
+  }
+
+  footer.medium .followers .navigation-2 li {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 1rem;
+  }
+
+  footer.medium .followers .navigation-2 li a {
+    font-size: 1rem;
+  }
+}
+
 @media screen and (min-width:1000px) {
   .wrap {
     margin-left: auto;
     margin-right: auto;
     width: 58.75rem;
+  }
+
+  header.large .menu li:first-child {
+    margin-left: 0;
+  }
+
+  header.large .menu li:last-child {
+    margin-right: 0;
+  }
+
+  header.large .menu li a {
+    font-size: 1.2rem;
   }
 }
